feat: range and binary